<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.github.skjolber.json-log-filter</groupId>
		<artifactId>parent</artifactId>
		<version>4.1.4-SNAPSHOT</version>
		<relativePath>../../pom.xml</relativePath>
	</parent>

	<artifactId>jmh</artifactId>

	<packaging>jar</packaging>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<jmh.version>1.37</jmh.version>
		<asm.version>9.9</asm.version>
		<arakelian.jsonfilter.version>4.0.1</arakelian.jsonfilter.version>
		<uberjar.name>benchmarks</uberjar.name>
		<sonar.skip>true</sonar.skip>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-core</artifactId>
			<version>${jmh.version}</version>
		</dependency>
		<dependency>
				<groupId>dev.blaauwendraad</groupId>
				<artifactId>json-masker</artifactId>
				<version>1.1.2</version>
		</dependency>		
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-generator-annprocess</artifactId>
			<version>${jmh.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm</artifactId>
				<version>${asm.version}</version>
		</dependency>
		<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm-commons</artifactId>
				<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.skjolber.json-log-filter</groupId>
			<artifactId>core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.skjolber.json-log-filter</groupId>
			<artifactId>jackson</artifactId>
		</dependency>
		<dependency>
			<groupId>com.arakelian</groupId>
			<artifactId>json-filter</artifactId>
			<version>${arakelian.jsonfilter.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
				<groupId>org.simdjson</groupId>
				<artifactId>simdjson-java</artifactId>
				<version>0.4.0</version>
		</dependency>		
	</dependencies>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<build>
		<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<compilerArgs>
							<arg>--add-modules</arg>
							<arg>jdk.incubator.vector</arg>
						</compilerArgs>						
						<annotationProcessorPaths>
							<path>
								<groupId>org.openjdk.jmh</groupId>
								<artifactId>jmh-generator-annprocess</artifactId>
								<version>${jmh.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkMode>always</forkMode>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
					<argLine>--add-modules jdk.incubator.vector</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<finalName>${uberjar.name}</finalName>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>org.openjdk.jmh.Main</mainClass>
								</transformer>
							</transformers>
							<filters>
								<filter>
									<!-- Shading signed JARs will fail without this. http://stackoverflow.com/questions/999489/invalid-signature-file-when-attempting-to-run-a-jar -->
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<configuration>
					<skipPublishing>true</skipPublishing>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
